--- a/app/web/modals2.html
+++ b/app/web/modals2.html
@@ -215,7 +215,7 @@
             <div class="row">
 
 
-                <div class="col-lg-4">
+                <div class="col-lg-8">
                     <div class="panel">
                         <div class="panel-heading">
                             Bootstrap Modals
@@ -228,44 +228,6 @@
                             <div class="m-t-md">
 
                                 <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal"> Launch demo modal</button>
-
-                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header text-center">
-                                                <h4 class="modal-title">Modal title</h4>
-                                                <small>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</small>
-                                            </div>
-                                            <div class="modal-body">
-                                                <h4 class="m-t-none">Lorem Ipsum is simply 111</h4>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-                                                <div class="row">
-                                                    <div class="col-md-4">
-                                                        <small class="stat-label">Today</small>
-                                                        <h4 class="m-t-xs">170,20 <i class="fa fa-level-up text-accent"></i></h4>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <small class="stat-label">Last month %</small>
-                                                        <h4 class="m-t-xs">%20,20 <i class="fa fa-level-down c-white"></i></h4>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <small class="stat-label">Last year</small>
-                                                        <h4 class="m-t-xs">246,40 <i class="fa fa-level-up text-accent"></i></h4>
-                                                    </div>
-                                                </div>
-                                                <div class="progress m-t-xs full progress-small">
-                                                    <div style="width: 65%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="65" role="progressbar" class=" progress-bar progress-bar-warning">
-                                                        <span class="sr-only">65% Complete (success)</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-accent">Save changes</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
 
                             </div>
 
@@ -336,86 +298,84 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8">
-                    <div class="panel">
-                        <div class="panel-body">
+                <div class="panel">
+                    <div class="panel-body">
 
-                            <div class="modal-example">
+                        <div class="modal-example">
 
-                                <style>
+                            <style>
                                     /* Local style only for demo purpose */
-                                    .modal-example .modal { position: relative; top: auto; right: auto; bottom: auto; left: auto; z-index: 1; display: block; }
+                                    .modal-example .modal { position: absolute; top: auto; right: auto; bottom: auto; left: 50%; z-index: 1; display: block; }
                                 </style>
 
-                                <div class="modal" id="myModal3" tabindex="-1" role="dialog">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-body">
-                                                <h4 class="m-t-none">Lorem Ipsum is simply 22222</h4>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-                                                <div class="row">
-                                                    <div class="col-md-4">
-                                                        <small class="stat-label">Today</small>
-                                                        <h4 class="m-t-xs">170,20 <i class="fa fa-level-up text-accent"></i></h4>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <small class="stat-label">Last month %</small>
-                                                        <h4 class="m-t-xs">%20,20 <i class="fa fa-level-down c-white"></i></h4>
-                                                    </div>
-                                                    <div class="col-md-4">
-                                                        <small class="stat-label">Last year</small>
-                                                        <h4 class="m-t-xs">246,40 <i class="fa fa-level-up text-accent"></i></h4>
-                                                    </div>
+                            <div class="modal" id="myModal3" tabindex="-1" role="dialog">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-body">
+                                            <h4 class="m-t-none">Lorem Ipsum is simply 22222333</h4>
+                                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                                            <div class="row">
+                                                <div class="col-md-4">
+                                                    <small class="stat-label">Today</small>
+                                                    <h4 class="m-t-xs">170,20 <i class="fa fa-level-up text-accent"></i></h4>
                                                 </div>
-                                                <div class="progress m-t-xs full progress-small">
-                                                    <div style="width: 65%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="65" role="progressbar" class=" progress-bar progress-bar-warning">
-                                                        <span class="sr-only">65% Complete (success)</span>
-                                                    </div>
+                                                <div class="col-md-4">
+                                                    <small class="stat-label">Last month %</small>
+                                                    <h4 class="m-t-xs">%20,20 <i class="fa fa-level-down c-white"></i></h4>
                                                 </div>
-                                                <table  class="table m-t-md">
-                                                    <thead>
-                                                    <tr>
-                                                        <th>Name</th>
-                                                        <th>Phone</th>
-                                                        <th>Street Address</th>
-                                                        <th>City</th>
-                                                        <th>Action</th>
-                                                    </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                    <tr>
-                                                        <td>Abraham</td>
-                                                        <td>076 9477 4896</td>
-                                                        <td>294-318 Duis Ave</td>
-                                                        <td>Vosselaar</td>
-                                                        <td><a href="#" class="btn btn-default btn-xs">View</a></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Phelan</td>
-                                                        <td>0500 034548</td>
-                                                        <td>680-1097 Mi Rd.</td>
-                                                        <td>Lavoir</td>
-                                                        <td><a href="#" class="btn btn-default btn-xs active">View</a></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Raya</td>
-                                                        <td>(01315) 27698</td>
-                                                        <td>Ap #289-8161 In Avenue</td>
-                                                        <td>Santomenna</td>
-                                                        <td><a href="#" class="btn btn-default btn-xs">View</a></td>
-                                                    </tr>
-                                                    </tbody>
-                                                </table>
+                                                <div class="col-md-4">
+                                                    <small class="stat-label">Last year</small>
+                                                    <h4 class="m-t-xs">246,40 <i class="fa fa-level-up text-accent"></i></h4>
+                                                </div>
                                             </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-accent">Save changes</button>
+                                            <div class="progress m-t-xs full progress-small">
+                                                <div style="width: 65%" aria-valuemax="100" aria-valuemin="0" aria-valuenow="65" role="progressbar" class=" progress-bar progress-bar-warning">
+                                                    <span class="sr-only">65% Complete (success)</span>
+                                                </div>
                                             </div>
+                                            <table  class="table m-t-md">
+                                                <thead>
+                                                <tr>
+                                                    <th>Name</th>
+                                                    <th>Phone</th>
+                                                    <th>Street Address</th>
+                                                    <th>City</th>
+                                                    <th>Action</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr>
+                                                    <td>Abraham</td>
+                                                    <td>076 9477 4896</td>
+                                                    <td>294-318 Duis Ave</td>
+                                                    <td>Vosselaar</td>
+                                                    <td><a href="#" class="btn btn-default btn-xs">View</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Phelan</td>
+                                                    <td>0500 034548</td>
+                                                    <td>680-1097 Mi Rd.</td>
+                                                    <td>Lavoir</td>
+                                                    <td><a href="#" class="btn btn-default btn-xs active">View</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Raya</td>
+                                                    <td>(01315) 27698</td>
+                                                    <td>Ap #289-8161 In Avenue</td>
+                                                    <td>Santomenna</td>
+                                                    <td><a href="#" class="btn btn-default btn-xs">View</a></td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-accent">Save changes</button>
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
+
 
                         </div>
                     </div>
