--- a/app/web/main.html
+++ b/app/web/main.html
@@ -104,7 +104,7 @@ ${head.html}
                                                 <tbody id="status_rows">
                                                 <tr>
                                                     <td>Main</td>
-                                                    <td>Loading data....</td>
+                                                    <td>No data....</td>
                                                 </tr>
                                                 </tbody>
                                             </table>
