account trade history first iteration

--- a/app/web/navigation.html
+++ b/app/web/navigation.html
@@ -6,6 +6,7 @@
             </li>
             <li class="active"><a role="button" id="link_dashboard">Dashboard (template)</a></li>
             <li><a role="button" id="link_balances">Balances</a></li>
+            <li><a role="button" id="link_tradehistory">Trade History</a></li>
             <li><a role="button" id="link_settings">Settings</a></li>
             <li><a role="button" id="link_marketpanels">Market Panels</a></li>
 
@@ -24,7 +25,7 @@
                     Statistics<span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
                 </a>
                 <ul id="tokens" class="nav nav-second collapse">
-                    <li><a role="button" id="link_trades_statistics">Last Month Trades</a></li>
+                    <li><a role="button" id="link_trades_statistics">Last Trades Stats</a></li>
                 </ul>
             </li>
 
