new module charts

--- a/app/web/navigation.html
+++ b/app/web/navigation.html
@@ -26,6 +26,7 @@
                 </a>
                 <ul id="tokens" class="nav nav-second collapse">
                     <li><a role="button" id="link_trades_statistics">Last Trades Stats</a></li>
+                    <li><a role="button" id="link_market_charts">Charts</a></li>
                 </ul>
             </li>
 
