market_charts: show ordebook as soon as available

--- a/app/web/market_charts.html
+++ b/app/web/market_charts.html
@@ -20,8 +20,8 @@
 </div>
 </br>
 <div class="col-md-3 pre-scrollable" style="max-height:650px; direction: rtl;">
+    <span>Base Volume</span>
     <ul id="nav1" class="nav nav-tabs nav-stacked"  style="height:100%; direction: ltr;">
-        <li class="active"><a data-toggle="tab" href="#tab-1" aria-expanded="true">Full table</a></li>
     </ul>
 </div>
 <div class="col-md-9">
