market_charts: new chart for show analysis

--- a/app/web/market_charts.html
+++ b/app/web/market_charts.html
@@ -32,12 +32,14 @@
         <div class="col-md-6">
             <div id="echart2" style="width:100%; height:250px;"></div>
         </div>
-    </br>
     </div>
+    </br>
     <div class="row">
-        <div class="table-responsive">
-            <table id="tableExample1" class="table">
-            </table>
+        <div class="col-md-6">
+            <div id="echart3" style="width:100%; height:250px;"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="echart4" style="width:100%; height:250px;"></div>
         </div>
     </div>
 </div>
