statistics>charts button for invalidate cache

--- a/app/web/market_charts.html
+++ b/app/web/market_charts.html
@@ -16,11 +16,17 @@
             </div>
         </div>
         <hr>
+        <div class="col-md-3" style="align: right">
+            <span>Base Volume</span>
+        </div>
+        <div class="col-md-9">
+                <button id="bRefresh" class="btn btn-default">Refresh</button>
+                <button id="bRefreshAll" class="btn btn-default">Clear cache</button>
+        </div>
     </div>
 </div>
-</br>
+<br>
 <div class="col-md-3 pre-scrollable" style="max-height:650px; direction: rtl;">
-    <span>Base Volume</span>
     <ul id="nav1" class="nav nav-tabs nav-stacked"  style="height:100%; direction: ltr;">
     </ul>
 </div>
