--- a/app/web/market_charts.html
+++ b/app/web/market_charts.html
@@ -48,4 +48,13 @@
             <div id="echart4" style="width:100%; height:250px;"></div>
         </div>
     </div>
+    </br>
+    <div class="row">
+        <div class="col-md-6">
+            <div id="echart5" style="width:100%; height:250px;"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="echart6" style="width:100%; height:250px;"></div>
+        </div>
+    </div>
 </div>
