removing title banner for more space Market Panels: fix trades query

--- a/app/web/marketpanels.html
+++ b/app/web/marketpanels.html
@@ -1,24 +1,11 @@
 
 <div class="row">
-    <div class="col-lg-12">
-        <div class="view-header">
-            <div class="pull-right text-right" style="line-height: 14px">
-                <small>Dashboard<br>Trades<br> <span class="c-white">Panel</span></small>
-            </div>
-            <div class="header-icon">
-                <i class="pe page-header-icon pe-7s-next-2"></i>
-            </div>
-            <div class="header-title">
-                <h3>Market Panels</h3>
-                <small>
-                    Draggable market panels
-                </small>
-            </div>
+        <div class="col-md-9">
+                <button id="bRefresh" class="btn btn-default">Refresh</button>
+                <button id="bRefreshAll" class="btn btn-default">Clear cache</button>
         </div>
-        <hr>
-    </div>
 </div>
-
+<hr>
 <div class="row draggable-container">
     <div class="col-md-3" id="col_1"><p></p><div id="newpanel_1"></div></div>
     <div class="col-md-3" id="col_2"><p></p><div id="newpanel_2"></div></div>
