charts: Orderbook chart's axispointer synced with ohlc chart's

--- a/app/web/limit_orders.html
+++ b/app/web/limit_orders.html
@@ -19,7 +19,7 @@
     </div>
 </div>
     <div class="row">
-        <button id="bReloadOrders" class="btn btn-accent btn-sm">Reload Orders</button> <button id="bBalances" class="btn btn-accent btn-sm">Balances</button>
+        <button id="bReloadOrders" class="btn btn-sm btn-default">Reload Orders</button> <button id="bBalances" class="btn btn-accent btn-sm">Balances</button>
     </div>
 </br>
 <div class="col-md-2 pre-scrollable" style="max-height:650px; direction: rtl;">
