--- a/app/web/navigation.html
+++ b/app/web/navigation.html
@@ -31,7 +31,7 @@
             </li>
 
             <li class="nav-category">
-                Template
+                Template__________________
             </li>
 
             <li>
