html serving change from wmain to wmodules small fixes

--- a/app/web/main.html
+++ b/app/web/main.html
@@ -28,22 +28,14 @@ ${head.html}
                         <i class="stroke-hamburgermenu"></i>
                     </a>
                 </div>
-                <form class="navbar-form navbar-left">
-                    <input type="text" class="form-control" placeholder="Placeholder" style="width: 175px">
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown"><button id="bShowStatus" type="button" class="btn btn-default">Status</button></li>
+                <ul class="nav navbar-nav navbar-left">
+                    <li class=" profil-link">
+                        <button id="bShowStatus" type="button" class="btn btn-default">Status</button>
+                    </li>
 
                     <li class="dropdown">
                         <a role="button" id="link_master_password" data-toggle="modal" data-target="#modal_master_password"> Unlock
                             <span id="unlock_status" class="pe pe-7s-lock pull-left" style="font-size: 24px;"></span></a>
-                    </li>
-
-                    <li class=" profil-link">
-                        <a href="login.html">
-                            <span class="profile-address">demo@demo.io</span>
-                            <img src="images/profile.jpg" class="img-circle" alt="">
-                        </a>
                     </li>
                 </ul>
             </div>
@@ -77,7 +69,7 @@ ${head.html}
                 </div>
             </div>
         </div>
-        <div class="container-fluid" id="page_container">
+        <div class="container-fluid" id="page_container" style="opacity:1;">
         </div>
     </section>
     <!-- End main content-->
