--- a/app/web/scripts.html
+++ b/app/web/scripts.html
@@ -1,5 +1,5 @@
 <!-- Vendor scripts -->
-<script src="vendor/pacejs/pace.min.js"></script>
+<!-- <script src="vendor/pacejs/pace.min.js"></script>-->
 <script type="text/javascript" src="scripts/brython.js"></script>
 <script type="text/javascript" src="scripts/brython_stdlib.js"></script>
 <script src="vendor/jquery/dist/jquery.min.js"></script>
