--- a/app/web/navigation.html
+++ b/app/web/navigation.html
@@ -2,12 +2,17 @@
     <nav>
         <ul class="nav luna-nav">
             <li class="nav-category">
-                Main
+                Portfolio
             </li>
             <li class="active"><a role="button" id="link_dashboard">Dashboard (template)</a></li>
             <li><a role="button" id="link_balances">Balances</a></li>
             <li><a role="button" id="link_tradehistory">Trade History</a></li>
             <li><a role="button" id="link_settings">Settings</a></li>
+
+
+            <li class="nav-category">
+                Markets
+            </li>
             <li><a role="button" id="link_marketpanels">Market Panels</a></li>
 
             <li>
@@ -19,7 +24,6 @@
                     <li><a role="button" id="link_order_repos">Order repositioning</a></li>
                 </ul>
             </li>
-
             <li>
                 <a href="#tokens" data-toggle="collapse" aria-expanded="false">
                     Statistics<span class="sub-nav-icon"> <i class="stroke-arrow"></i> </span>
